infra/alb_stack.yml
#ALB Template
---
AWSTemplateFormatVersion: "2010-09-09"
Description: This is a template for Security group of ALB, ALB, Target group, ALB Listener, WAF and CloudFront

Parameters:
  CMS3VPC:
    Description: "VPC ID of the existing VPC"
    Type: AWS::EC2::VPC::Id

  CMS3PublicSubnet1:
    Description: "Public Subnet 1 ID"
    Type: AWS::EC2::Subnet::Id

  CMS3PublicSubnet2:
    Description: "Public Subnet 2 ID"
    Type: AWS::EC2::Subnet::Id

Resources:
  CMS3ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows HTTP and HTTPS Traffic
      VpcId: 
        Ref: CMS3VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0  
      Tags: 
        - Key: Name
          Value: CMS3ALBSecurityGroup

  CMS3HTTPTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: 
        Ref: CMS3VPC
      Protocol: HTTP
      Port: 80
      TargetType: ip
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Tags:
        - Key: Name
          Value: CMS3HTTPTargetGroup

  CMS3HTTPSTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: 
        Ref: CMS3VPC
      Protocol: HTTPS
      Port: 443
      TargetType: ip
      HealthCheckProtocol: HTTPS
      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Tags:
        - Key: Name
          Value: CMS3HTTPSTargetGroup

  CMSNodejsTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: 
        Ref: CMS3VPC
      Protocol: HTTP
      Port: 8080
      TargetType: instance
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Tags:
        - Key: Name
          Value: CMSNodejsTargetGroup

  CMS3ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Name: CMS3ApplicationLoadBalancer
      SecurityGroups:
        - !Ref CMS3ALBSecurityGroup
      Subnets:
        - !Ref CMS3PublicSubnet1
        - !Ref CMS3PublicSubnet2
      Scheme: internet-facing
      Type: application

  CMS3ALBHTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: 
        Ref: CMS3ApplicationLoadBalancer
      Protocol: HTTPS
      Port: 443
      DefaultActions:
        - Type: forward
          TargetGroupArn: 
            Ref: CMS3HTTPSTargetGroup
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:722136401996:certificate/44fa3ab7-f45f-493c-9be0-20936f308f26

  CMS3NodejsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: 
        Ref: CMS3ApplicationLoadBalancer
      Protocol: HTTP
      Port: 8080
      DefaultActions:
        - Type: forward
          TargetGroupArn: 
            Ref: CMSNodejsTargetGroup

Outputs:
  NodejsTargetGroupExport:
    Description: Target group ARN for ECS Node.js service
    Value: !Ref CMSNodejsTargetGroup
    Export:
      Name: !Sub CMS3-TG-Nodejs-${AWS::Region}

  ALBSecurityGroup:
    Description: Security group for the ALB
    Value: !Ref CMS3ALBSecurityGroup
    Export:
      Name: !Sub CMS3-ALB-SG-${AWS::Region}

  ALBArn:
    Description: ARN of the Application Load Balancer
    Value: !Ref CMS3ApplicationLoadBalancer
    Export:
      Name: !Sub CMS3-ALB-${AWS::Region}
